[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Fonts/The Snowday.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Card/Card.gd" type="Script" id=2]
[ext_resource path="res://assets/Card/iconCheck_grey.png" type="Texture" id=3]
[ext_resource path="res://assets/Card/iconCheck_bronze.png" type="Texture" id=4]
[ext_resource path="res://assets/Card/panel_beige.png" type="Texture" id=5]
[ext_resource path="res://assets/Card/iconCross_brown.png" type="Texture" id=6]
[ext_resource path="res://assets/Card/iconCheck_blue.png" type="Texture" id=7]
[ext_resource path="res://assets/Card/iconCross_blue.png" type="Texture" id=8]
[ext_resource path="res://assets/Card/iconCross_grey.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.188235, 0.160784, 0.160784, 0.580392 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 24

[sub_resource type="Animation" id=7]
resource_name = "shiny"
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:custom_styles/panel")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/Fonts/The Snowday.ttf"

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 1 )

[node name="CardBase" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Panel" parent="."]
margin_left = 357.0
margin_top = 109.0
margin_right = 766.0
margin_bottom = 420.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shiny = SubResource( 7 )

[node name="ColorRect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -182.0
margin_right = 244.0
margin_bottom = 112.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.786
margin_top = -185.338
margin_right = 248.214
margin_bottom = 114.662
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XButton" type="TextureButton" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.214
margin_top = 86.036
margin_right = -115.214
margin_bottom = 136.036
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="TextureButton" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 124.786
margin_top = 86.036
margin_right = 174.786
margin_bottom = 136.036
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.214
margin_top = -122.662
margin_right = 124.786
margin_bottom = -90.662
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.466667, 0.301961, 0.223529, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Limitar Comercios"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.214
margin_top = -41.662
margin_right = 124.786
margin_bottom = -17.662
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.443137, 0.305882, 0.305882, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Limitar Comercios"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureRect/XButton" to="." method="_on_XButton_pressed"]
[connection signal="ready" from="TextureRect/XButton" to="." method="_on_XButton_ready"]
[connection signal="pressed" from="TextureRect/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="ready" from="TextureRect/CheckButton" to="." method="_on_CheckButton_ready"]
